--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;    
 }
 
 body {
@@ -92,7 +93,7 @@ header {
     width:25%;
     height:90%;
     display:inline-block;
-    box-sizing: border-box; 
+    /* box-sizing: border-box;  */
     margin:30px 10px; 
     background:whitesmoke;
     color: black;
@@ -115,10 +116,8 @@ header {
 .container {
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width:100%;
-    height: 340px;
+    justify-content: space-between;    
+    width:100%;   
 }
 
 .container h2 {
@@ -126,10 +125,8 @@ header {
 }
 
 .contact, .about {
-    width:50%;
-    height: 100%;
     box-sizing: border-box;     
-    padding: 30px;
+    padding: 1.5em;
     color: white;
     text-align: center;
 }
